5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1674_1880.log
== TEST (2019-05-02 04:03:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invado")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 04:03:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero de mes invado")
-- EXECUTION TIME:
0.1282
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 04:05:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if((1<=m)and(m<=12)):
	if(m==1):
		print("janeiro")
   elif(m==2):
	   print("fevereiro")
   elif(m==3):
	   print("marco")
   elif(m==4):
	   print("abril")
   elif(m==5):
	   print("maio")
   elif(m==6):
	   print("junho")
   elif(m==7):
	   print("julho")
   elif(m==8):
	   print("agosto")
   elif(m==9):
	   print("setembro")
   elif(m==10):
 	   print("outubro")
   elif(m==11):
	   print("novembro")
   elif(m==12):
	   print("dezembro")
else:
	print("numero de mes invado")
-- EXECUTION TIME:
0.124756
-- ERROR:
  File "/home/codebench/codes/1674/1880/main.py", line 6
    elif(m==2):
              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 04:06:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if((1<=m)and(m<=12)):
	if(m==1):
		print("janeiro")
   elif(m==2):
	   print("fevereiro")
   elif(m==3):
	   print("marco")
   elif(m==4):
	   print("abril")
   elif(m==5):
	   print("maio")
   elif(m==6):
	   print("junho")
   elif(m==7):
	   print("julho")
   elif(m==8):
	   print("agosto")
   elif(m==9):
	   print("setembro")
   elif(m==10):
 	   print("outubro")
   elif(m==11):
	   print("novembro")
   elif(m==12):
	   print("dezembro")
else:
	print("numero de mes invado")
-- ERROR:
File "XXXX", line 6
    elif(m==2):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 04:07:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if((1<=m)and(m<=12)):
	if(m==1):
		print("janeiro")
   elif(m==2):
	   print("fevereiro")
   elif(m==3):
	   print("marco")
   elif(m==4):
	   print("abril")
   elif(m==5):
	   print("maio")
   elif(m==6):
	   print("junho")
   elif(m==7):
	   print("julho")
   elif(m==8):
	   print("agosto")
   elif(m==9):
	   print("setembro")
   elif(m==10):
 	   print("outubro")
   elif(m==11):
	   print("novembro")
   elif(m==12):
	   print("dezembro")
else:
	print("numero de mes invado")
-- ERROR:
File "XXXX", line 6
    elif(m==2):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 04:10:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if((1<=m)and(m<=12)):
	if(m==1):
		print("Janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
else:
	print("numero de mes invalido")
		
	
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 04:11:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero que equivale a um mes(1~12?:)"))
if((1<=m)and(m<=12)):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
else:
	print("numero de mes invalido")
		
	
-- EXECUTION TIME:
0.192567
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
